DOM traversing and Tabbed Component

--- a/07-Advanced-DOM/style.css
+++ b/07-Advanced-DOM/style.css
@@ -1,5 +1,6 @@
 /* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
 /** root in css == as document in js   */
+/* ? CUSTOM PROPERTIES */
 :root {
   --color-primary: #5ec576;
   --color-secondary: #ffcb03;
