--- a/10-Asynchronous/style.css
+++ b/10-Asynchronous/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .country {
-  background-color: #fff;
+  background-color: rgb(226, 224, 224);
   box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
   font-size: 1.8rem;
   width: 30rem;
